# album-splitter

./: .gitignore  .pre-commit-config.yaml  .zedstate  AmazonParser.py  Makefile  README.md  WikiParser.py  build_exe_win.bat  clean.bat  clean.sh  easygui.py  make_install.bat  pyproject.toml  requirements.txt  setup.cfg  split.py  split.spec  splitAlbum.py  split_init.py  splitutil.py  testGUI.py  tracks.txt  tracks.txt.example
.github/workflows/: ci.yml
MetaDataProviders/: Amazon.py  Wikipedia.py  __init__.py
album_splitter/: __main__.py  main.py  parse_tracks.py  split_file.py  tag_file.py
album_splitter/tests/: test_parse_tracks.py
album_splitter/utils/: secure_filename.py  ytdl_interface.py
requirements/: conda.txt  dev.txt  prod.txt
tests/: test_split.py
tests/resources/: constants.py  fake_response.py  html_file_downloader.py
tests/test_MetaDataProviders/: test_Amazon.py  test_Wikipedia.py
utilities/: all_matching_regex.py  track_parser.py
utils/: __init__.py  ffmpeg_utils.py  find.py  parsed_result.py  split_song.py  time_to_seconds.py  track_parser.py  tracks_editor.py  tracks_parser.py  update_time_change.py  write_tracks_to_file.py
