[metadata]
name = album-splitter
version = 2.0.0
author = Cristian Baldi
author_email = bld.cris.96@gmail.com
description = Split a single-file album into its tracks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crisbal/album-splitter
project_urls =
    Bug Tracker = https://github.com/crisbal/album-splitter/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Multimedia :: Sound/Audio
    
[options]
packages = find:
python_requires = >=3.7
install_requires =
    youtube-dl
    ffmpy
    music_tag
    
[options.entry_points]
console_scripts =
    album-splitter = album_splitter:__main__